--- a/code201/index.html
+++ b/code201/index.html
@@ -11,7 +11,7 @@ li {color: goldenrod}
 <body>
     <header>
       <h1>Welcome to the Beach Locater !</h1>
-      <!-- this is a spot for a nav bar -->
+      
     </header>
 
   <main>
@@ -36,17 +36,15 @@ li {color: goldenrod}
 
 </body>
 
-<!-- <script> this at the end so you dont delay loading of the page </script> -->
+
 <script>
 
   
-    // writes a message in the console
+ 
   console.log('Hello World!'); 
-  // it takes in one argument which is rendered to your screen in a pop up window as an alert!
-  let userName= prompt('What is your name?');
-  // the return value on prompt is the response the user gives in the prompt window, it comes back as a string
   
-  // debugger;
+  let userName= prompt('What is your name?');
+  
   console.log('The userName is ' + userName); 
   let alertReturn = alert('Welcome to the page ' + userName);
 
@@ -73,9 +71,19 @@ li {color: goldenrod}
   if(person.toLowerCase() =='left'){
   alert('Please close your browser and do not return.');}
   
-  // the default return value is undefined
-  // the return value of an alert 
+ 
 </script>
 
 
 </html>
+
+
+<!-- // the default return value is undefined
+// the return value of an alert 
+// the return value on prompt is the response the user gives in the prompt window, it comes back as a string
+  
+  // debugger;
+  // it takes in one argument which is rendered to your screen in a pop up window as an alert!
+  <script> this at the end so you dont delay loading of the page </script>
+  // writes a message in the console
+  this is a spot for a nav bar -->
